Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97260

Model blend particle spatial node is not always initialized

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.2.1, 6.3.0 Alpha
    • 6.2
    • Quick: 3D
    • None
    • 1ac6c629625c81475ab581cfb163191581a3491d (qt/qtquick3d/dev) 670f4d372a4cee3c880fe3cb720c16446d72aa45 (qt/qtquick3d/6.2)

    Description

      The model blend particle, which uses models spatial node, doesn't always get properly initialized at startup. This happens if the model doesn't have spatial node when the particle gets its updateSpatialNode called.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            anmaatta Antti Määttä
            anmaatta Antti Määttä
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes