Fix model-blend particle spatial node initialization

The model spatial node might not have been initialized when the particle
updateSpatialNode gets called so create the spatial node there if it is
not created.

Fixes: QTBUG-97260
Change-Id: I114832057dcf9fd510fe6642af0d93527a38b585
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit 1ac6c629625c81475ab581cfb163191581a3491d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>